# feeder_parse_history

./: .gitignore  CMakeLists.txt  Dockerfile
conf/: config.ini  feeder.yaml
lib/QTSApiPub/include/: GTAQTSInterfaceBase.h  GTAQTSInterfaceBaseC.h  GTAQTSInterfaceEx.h  GTAQTSInterfaceExC.h  QTSDataFieldDefine.h  QTSDataType.h  QTSStruct.h
lib/QTSApiPub/lib/Linux64/: libcurl.so.4
lib/QTSApiPub/lib/Win64/: GTAQTSApiDotNet.Model.XML  GTAQTSApiDotNet.XML  GTAQTSApiMulti.ini
src/qts_feeder/: config.cc  config.h  define.h  main.cc  qts_server.cc  qts_server.h
src/wal_reader/: main.cc
